--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -893,7 +893,7 @@ input, select, textarea {
 
 			.row {
 				display: flex;
-				flex-wrap: nowrap;
+				flex-wrap: wrap;
 				box-sizing: border-box;
 				align-items: stretch;
 			}
@@ -1138,7 +1138,7 @@ input, select, textarea {
 
 			.row {
 				display: flex;
-				flex-wrap: wrap;
+				flex-wrap: nowrap;
 				box-sizing: border-box;
 				align-items: stretch;
 			}
@@ -1666,7 +1666,7 @@ input, select, textarea {
 /* Footer */
 
 	#footer {
-		padding: 45px 0 45px 0;
+		padding: 20px 0 20px 0;
 		text-shadow: 1px 1px 1px white;
 		color: #546b76;
 		text-shadow: 1px 1px 0px rgba(255, 255, 255, 0.5);
@@ -1687,7 +1687,8 @@ input, select, textarea {
 			border-bottom: solid 1px #b5bec3;
 		}
 
-		#footer .link-list li {
+		#footer 
+		#.link-list li {
 			border-top: solid 1px #e0e4e6;
 			border-bottom: solid 1px #b5bec3;
 		}
@@ -1703,7 +1704,7 @@ input, select, textarea {
 		border-top: solid 1px #b5bec3;
 		box-shadow: inset 0px 1px 0px 0px #e0e4e7;
 		text-align: center;
-		padding: 45px 0 80px 0;
+		padding: 10px 0 10px 0;
 		color: #8d9ca3;
 		text-shadow: 1px 1px 0px rgba(255, 255, 255, 0.5);
 	}
