--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1687,8 +1687,7 @@ input, select, textarea {
 			border-bottom: solid 1px #b5bec3;
 		}
 
-		#footer 
-		#.link-list li {
+		#footer .link-list li {
 			border-top: solid 1px #e0e4e6;
 			border-bottom: solid 1px #b5bec3;
 		}
